2008-09-21 01:40 jannis

	* panel/panel-dialogs.c: Use gtk_list_store_clear() on the model of 
	  the panel selector combo box instead of calling 
	  gtk_combo_box_remove_text() several times in a row when destroying 
	  panel. This fixes bug #4401 (xfce4-panel halted when a panel was 
	  removed).

2008-08-30 22:04  jannis

	* ChangeLog, autogen.sh:
	  * autogen.sh: Don't print errors when trying to detect the
	  revision
	  of a git svn repository.

2008-08-25 13:21  kelnos

	* ChangeLog, mcs-plugin/Makefile.am,
	  mcs-plugin/xfce4-panel-manager.desktop.in:
	  include panel settings dialog in new settings manager

2008-08-17 19:49  stephan

	* configure.in.in:
	  Bump version number

2008-08-17 19:48  stephan

	* configure.in.in, docs/API/tmpl/libxfce4panel-macros.sgml,
	  docs/API/tmpl/libxfce4panel-unused.sgml,
	  docs/API/tmpl/xfce-hvbox.sgml, docs/API/tmpl/xfce-itembar.sgml,
	  docs/API/tmpl/xfce-panel-enums.sgml,
	  docs/API/tmpl/xfce-panel-external-plugin.sgml,
	  docs/API/tmpl/xfce-panel-internal-plugin.sgml,
	  docs/API/tmpl/xfce-panel-plugin-iface.sgml,
	  docs/API/tmpl/xfce-panel-plugin.sgml,
	  docs/API/tmpl/xfce-panel-window.sgml:
	  Update version number (and docs)

2008-08-15 18:35  nick

	* plugins/clock/clock-digital.c:
	  * Don't return if the format is NULL, but fallback to the
	  default format instead.

2008-08-14 16:29  nick

	* plugins/clock/clock-analog.c, plugins/clock/clock-binary.c,
	  plugins/clock/clock-lcd.c:
	  * Clip the clock drawing areas.

2008-08-10 21:42  maximilian

	* po/ChangeLog, po/ko.po, po/pl.po:
	  Translations updated and added in Indonesian, Korean and Polish.

2008-08-10 13:50  nick

	* plugins/clock/clock-lcd.c:
	  * Fix drawing a of the lcd clock, improve rounding and
	  some code improvements (readability).

2008-08-10 11:43  nick

	* plugins/clock/clock-analog.c, plugins/clock/clock-binary.c,
	  plugins/clock/clock-dialog.c, plugins/clock/clock-digital.c,
	  plugins/clock/clock-lcd.c, plugins/clock/clock.c: