@@ -47,8 +47,6 @@ plugins/tasklist/tasklist-dialogs.c
 plugins/windowlist/windowlist.c
 plugins/windowlist/windowlist-dialog.c
 
-mcs-plugin/plugin.c
-
 plugins/actions/actions.desktop.in.in
 plugins/clock/clock.desktop.in.in
 plugins/iconbox/iconbox.desktop.in.in
@@ -60,4 +58,4 @@ plugins/systray/systray.desktop.in.in
 plugins/tasklist/tasklist.desktop.in.in
 plugins/windowlist/windowlist.desktop.in.in
 
-mcs-plugin/xfce4-panel-manager.desktop.in
+settings/xfce4-panel-manager.desktop.in
