@@ -1,3 +1,8 @@
+2008-10-13 11:42 stephan
+
+	* mcs-plugins/*, settings/*, 
+	  configure.in.in, po/POTFILES.in: Remove last bits of mcs-history.
+
 2008-09-21 01:40 jannis
 
 	* panel/panel-dialogs.c: Use gtk_list_store_clear() on the model of 
